--- a/index.html
+++ b/index.html
@@ -2,55 +2,97 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NOA Cafe</title>
-    <link rel="stylesheet" href="./style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>NOA Cafe</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <img src="logo.jpeg" alt="NOA Cafe Logo" class="logo">
-        <h1>Every sip has a story</h1>
-        <nav>
-            <ul>
-                <li><a href="#menu">المنيو</a></li>
-                <li><a href="#order">اطلب الآن</a></li>
-                <li><a href="#contact">تواصل معنا</a></li>
-            </ul>
-        </nav>
-    </header>
+  <header>
+    <div class="container">
+      <img src="logo.jpeg" class="logo" alt="NOA Logo">
+      <h1>Every sip has a story</h1>
+      <nav>
+        <a href="#menu">المنيو</a>
+        <a href="#order">الطلب</a>
+        <a href="#contact">تواصل معنا</a>
+      </nav>
+    </div>
+  </header>
+
+  <main>
     <section id="menu">
-        <h2>المنيو</h2>
-        <div class="menu-item">إثيوبي حار - 5.75 ريال</div>
-        <div class="menu-item">إثيوبي بارد - 7.75 ريال</div>
-        <div class="menu-item">كولومبي حار - 5.75 ريال</div>
-        <div class="menu-item">كولومبي بارد - 7.75 ريال</div>
-        <div class="menu-item">كوكيز - 7.75 ريال</div>
-        <div class="menu-item">براونيز - 5.75 ريال</div>
-        <div class="menu-item">أصابع كوكيز - 5.75 ريال</div>
-        <div class="menu-item">كرك - 5 ريال</div>
+      <h2>المنيو</h2>
+      <div class="menu-grid">
+        <div class="item">
+          <img src="coffee-ethiopian.jpg" alt="إثيوبي">
+          <p>إثيوبي - 14 ر س</p>
+          <button>إضافة للسلة</button>
+        </div>
+        <div class="item">
+          <img src="coffee-colombian.jpg" alt="كولومبي">
+          <p>كولومبي - 14 ر س</p>
+          <button>إضافة للسلة</button>
+        </div>
+        <div class="item">
+          <img src="coffee-karak.jpg" alt="كرك">
+          <p>كرك - 12 ر س</p>
+          <button>إضافة للسلة</button>
+        </div>
+        <div class="item">
+          <img src="coffee-milk.jpg" alt="كلي">
+          <p>كلي - 7 ر س</p>
+          <button>إضافة للسلة</button>
+        </div>
+      </div>
     </section>
+
     <section id="order">
-        <h2>اطلب الآن</h2>
-        <form>
-            <label>اسمك:</label><input type="text" name="name"><br>
-            <label>رقم الجوال:</label><input type="text" name="phone"><br>
-            <label>نوع الطلب:</label>
-            <select name="type">
-                <option>توصيل</option>
-                <option>استلام من الفرع</option>
-            </select><br>
-            <label>تفاصيل الطلب:</label><textarea name="details"></textarea><br>
-            <button type="submit">إرسال الطلب</button>
-        </form>
+      <h2>الطلب</h2>
+      <div class="order-options">
+        <div class="option">
+          <p>توصيل عبر مندوب</p>
+          <small>تواصل يصلك الإيصال</small>
+        </div>
+        <div class="option">
+          <p>استلام من الفرع</p>
+          <small>من 6:00 ص - 11:00 ص & 3:30 م - 12:00 ص</small>
+        </div>
+      </div>
+
+      <div class="menu-grid">
+        <div class="item">
+          <img src="cookie.jpg" alt="كوكيز">
+          <p>كوكيز - 7 ر س</p>
+          <button>إضافة للسلة</button>
+        </div>
+        <div class="item">
+          <img src="sticks.jpg" alt="أصابع">
+          <p>إصبع تامات - 10 ر س</p>
+          <button>إضافة للسلة</button>
+        </div>
+        <div class="item">
+          <img src="brownie.jpg" alt="براونيز">
+          <p>براونيز - 10 ر س</p>
+          <button>إضافة للسلة</button>
+        </div>
+      </div>
     </section>
+
     <section id="contact">
-        <h2>تواصل معنا</h2>
-        <p>للطلبات عبر الواتساب: <a href="https://wa.me/966XXXXXXXXX">اضغط هنا</a></p>
-        <p>أو عبر الإيميل: noa@cafe.com</p>
+      <h2>تواصل معنا</h2>
+      <form>
+        <input type="text" placeholder="الاسم">
+        <input type="text" placeholder="رقم الجوال">
+        <textarea placeholder="الرسالة"></textarea>
+        <button type="submit">إرسال</button>
+      </form>
+      <p>+966 123456789</p>
     </section>
-    <footer>
-        <p>© 2025 NOA Cafe - noa.cafe</p>
-    </footer>
+  </main>
+
+  <footer>
+    <p>© 2025 NOA Cafe - noa.cafe</p>
+  </footer>
 </body>
 </html>
