--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NOA Cafe</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
@@ -25,22 +25,22 @@
       <h2>المنيو</h2>
       <div class="menu-grid">
         <div class="item">
-          <img src="./coffee-ethiopian.jpg" alt="إثيوبي">
+          <img src="coffee-ethiopian.jpg" alt="إثيوبي">
           <p>إثيوبي - 14 ر س</p>
           <button>إضافة للسلة</button>
         </div>
         <div class="item">
-          <img src="./coffee-colombian.jpg" alt="كولومبي">
+          <img src="coffee-colombian.jpg" alt="كولومبي">
           <p>كولومبي - 14 ر س</p>
           <button>إضافة للسلة</button>
         </div>
         <div class="item">
-          <img src="./coffee-karak.jpg" alt="كرك">
+          <img src="coffee-karak.jpg" alt="كرك">
           <p>كرك - 12 ر س</p>
           <button>إضافة للسلة</button>
         </div>
         <div class="item">
-          <img src="./coffee-milk.jpg" alt="كلي">
+          <img src="coffee-milk.jpg" alt="كلي">
           <p>كلي - 7 ر س</p>
           <button>إضافة للسلة</button>
         </div>
@@ -62,17 +62,17 @@
 
       <div class="menu-grid">
         <div class="item">
-          <img src="./cookie.jpg" alt="كوكيز">
+          <img src="cookie.jpg" alt="كوكيز">
           <p>كوكيز - 7 ر س</p>
           <button>إضافة للسلة</button>
         </div>
         <div class="item">
-          <img src="./sticks.jpg" alt="أصابع">
+          <img src="sticks.jpg" alt="أصابع">
           <p>إصبع تامات - 10 ر س</p>
           <button>إضافة للسلة</button>
         </div>
         <div class="item">
-          <img src="./brownie.jpg" alt="براونيز">
+          <img src="brownie.jpg" alt="براونيز">
           <p>براونيز - 10 ر س</p>
           <button>إضافة للسلة</button>
         </div>
