--- a/index.html
+++ b/index.html
@@ -2,94 +2,96 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>NOA Cafe</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-  <header>
-    <div class="container">
-      <img src="logo.jpeg" class="logo" alt="NOA Logo">
-      <h1>Every sip has a story</h1>
+  <header class="hero">
+    <div class="topbar">
+      <span class="domain">noa.cafe</span>
       <nav>
+        <a href="#">الرئيسية</a>
         <a href="#menu">المنيو</a>
         <a href="#order">الطلب</a>
         <a href="#contact">تواصل معنا</a>
       </nav>
     </div>
+    <div class="hero-content">
+      <img src="./logo.jpeg" alt="NOA Logo" class="logo" />
+      <h1>Every sip has a story</h1>
+      <a href="#menu" class="btn">اطلب الآن</a>
+    </div>
   </header>
 
-  <main>
-    <section id="menu">
-      <h2>المنيو</h2>
-      <div class="menu-grid">
-        <div class="item">
-          <img src="coffee-ethiopian.jpg" alt="إثيوبي">
-          <p>إثيوبي - 14 ر س</p>
-          <button>إضافة للسلة</button>
-        </div>
-        <div class="item">
-          <img src="coffee-colombian.jpg" alt="كولومبي">
-          <p>كولومبي - 14 ر س</p>
-          <button>إضافة للسلة</button>
-        </div>
-        <div class="item">
-          <img src="coffee-karak.jpg" alt="كرك">
-          <p>كرك - 12 ر س</p>
-          <button>إضافة للسلة</button>
-        </div>
-        <div class="item">
-          <img src="coffee-milk.jpg" alt="كلي">
-          <p>كلي - 7 ر س</p>
-          <button>إضافة للسلة</button>
-        </div>
+  <section id="menu">
+    <h2>المنيو</h2>
+    <div class="menu-items">
+      <div class="item">
+        <img src="./coffee-ethiopian.jpg" alt="إثيوبي" />
+        <p>إثيوبي<br /><span>14 ر س</span></p>
+        <button>إضافة للسلة</button>
       </div>
-    </section>
-
-    <section id="order">
-      <h2>الطلب</h2>
-      <div class="order-options">
-        <div class="option">
-          <p>توصيل عبر مندوب</p>
-          <small>تواصل يصلك الإيصال</small>
-        </div>
-        <div class="option">
-          <p>استلام من الفرع</p>
-          <small>من 6:00 ص - 11:00 ص & 3:30 م - 12:00 ص</small>
-        </div>
+      <div class="item">
+        <img src="./coffee-colombian.jpg" alt="كولومبي" />
+        <p>كولومبي<br /><span>14 ر س</span></p>
+        <button>إضافة للسلة</button>
       </div>
-
-      <div class="menu-grid">
-        <div class="item">
-          <img src="cookie.jpg" alt="كوكيز">
-          <p>كوكيز - 7 ر س</p>
-          <button>إضافة للسلة</button>
-        </div>
-        <div class="item">
-          <img src="sticks.jpg" alt="أصابع">
-          <p>إصبع تامات - 10 ر س</p>
-          <button>إضافة للسلة</button>
-        </div>
-        <div class="item">
-          <img src="brownie.jpg" alt="براونيز">
-          <p>براونيز - 10 ر س</p>
-          <button>إضافة للسلة</button>
-        </div>
+      <div class="item">
+        <img src="./coffee-milk.jpg" alt="كلي" />
+        <p>كلي<br /><span>7 ر س</span></p>
+        <button>إضافة للسلة</button>
       </div>
-    </section>
+      <div class="item">
+        <img src="./coffee-karak.jpg" alt="كرك" />
+        <p>كرك<br /><span>12 ر س</span></p>
+        <button>إضافة للسلة</button>
+      </div>
+    </div>
+  </section>
 
-    <section id="contact">
-      <h2>تواصل معنا</h2>
-      <form>
-        <input type="text" placeholder="الاسم">
-        <input type="text" placeholder="رقم الجوال">
-        <textarea placeholder="الرسالة"></textarea>
-        <button type="submit">إرسال</button>
-      </form>
-      <p>+966 123456789</p>
-    </section>
-  </main>
+  <section id="order">
+    <h2>الطلب</h2>
+    <div class="delivery-options">
+      <div class="option">
+        <img src="./cookie.jpg" alt="توصيل" />
+        <p>توصيل عبر مندوب<br /><span>ترسلين إيصال الميل</span><br />10 ر س</p>
+      </div>
+      <div class="option">
+        <img src="./pickup.png" alt="استلام" />
+        <p>استلام من الفرع<br /><span>تواصل قبل نص ساعه</span><br />6:00 - 11:00 / 3:30 - 12:00</p>
+      </div>
+    </div>
+    <div class="menu-items">
+      <div class="item">
+        <img src="./cookie.jpg" alt="علكوي" />
+        <p>علكوي<br /><span>7 ر س</span></p>
+        <button>إضافة للسلة</button>
+      </div>
+      <div class="item">
+        <img src="./sticks.jpg" alt="تامكات" />
+        <p>إصبع تامكات<br /><span>10 ر س</span></p>
+        <button>إضافة للسلة</button>
+      </div>
+      <div class="item">
+        <img src="./brownie.jpg" alt="براونيز" />
+        <p>برسويل<br /><span>10 ر س</span></p>
+        <button>إضافة للسلة</button>
+      </div>
+    </div>
+  </section>
+
+  <section id="contact">
+    <h2>تواصل معنا</h2>
+    <form>
+      <input type="text" placeholder="الاسم" />
+      <input type="text" placeholder="رقم الجوال" />
+      <textarea placeholder="الرسالة"></textarea>
+      <button type="submit">إرسال</button>
+    </form>
+    <p class="phone">+966 123456789</p>
+  </section>
 
   <footer>
     <p>© 2025 NOA Cafe - noa.cafe</p>
