--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </nav>
     </div>
     <div class="hero-content">
-      <img src="./logo.png" alt="NOA Logo" class="logo" />
+      <img src="./logo.jpeg" alt="NOA Logo" class="logo" />
       <h1>Every sip has a story</h1>
       <a href="#menu" class="btn">اطلب الآن</a>
     </div>
